--- a/html/contact.html
+++ b/html/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="../css/index.css">
-    <title>Home</title>
+    <title>Contact</title>
   </head>
   <body>
     <header class="red">
